2013-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.22): Add GetCommandLine and regcomp
	changes.

2013-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygwin-ug-net/cygwin-ug-net.html): Add dependency to
	cygwin.xsl.
	(cygwin-api/cygwin-api.html): Ditto.
	(cygwin-ug-net/cygwin-ug-net.pdf): Add dependency to fo.xsl.
	(cygwin-api/cygwin-api.pdf): Ditto.
	(cygwin-api.xml): Drop "." path component from doctool dependency.
	Change Makefile to Makefile.in dep.
	(doctool): Drop "." path component from target.

2013-07-20  Warren Young  <warren@etr-usa.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygwin-ug-net/cygwin-ug-net.pdf): Process input via
	xsltproc and fop.
	(cygwin-api/cygwin-api.pdf): Ditto.
	* fo.xsl: New file.

2013-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.22): New section.  Document dropped
	support for /dev/mem, /dev/kmem, /dev/port.
	* specialnames.xml (pathnames-posixdevices): Drop description of
	/dev/mem, /dev/kmem, /dev/port.

2013-06-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* new-features.sgml (ov-new1.7.21): New section. Document rawmemchr.

2013-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* faq-using.xml (faq.using.private-cygwin): Drop.

2013-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* faq-using.xml (faq.using.multiple-copies): Modernize to reflect
	installation separation since Cygwin 1.7.
	(faq.using.third-party.multiple-copies): Ditto.

2013-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.xml: Fix link to FAQ.

2013-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* faq-copyright.xml: Fix link to license.
	* faq-using.xml: Ditto.
	* faq-what.xml: Ditto.

2013-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* faq-programming.xml: Convert url to refer to new flat faq.html file.
	* faq-setup.xml: Ditto.
	* faq-using.xml: Ditto.
	* highlights.xml: Ditto.
