@@ -1,3 +1,11 @@
+2013-07-25  Corinna Vinschen  <corinna@vinschen.de>
+
+	* gcc.xml (gcc-default: Rename from gcc-cons.  Change title.
+	(gcc-64): New section explaininig differences in programming for
+	64 bit Cygwin.
+	(gcc-gui): Simplify description and aim at UNIX/Linux developers only.
+	Note that X programming is preferred.  Drop example.
+
 2013-07-21  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.sgml (ov-new1.7.22): Add GetCommandLine and regcomp
